2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/log.c: Avoid assignments in comparisons.
	* libmisc/log.c: Add brackets and parenthesis.
	* libmisc/log.c: read() returns a ssize_t (note size_t).
	* libmisc/log.c: Avoid implicit conversion of pointers to
	booleans.
	* libmisc/log.c: Ignore return value of time() when use with a
	non NULL argument.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/strtoday.c: Avoid implicit conversion of pointers to
	booleans.
	* libmisc/strtoday.c: Add brackets and parenthesis.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/salt.c: Use a size_t for the size of strings instead of
	unsigned int.
	* libmisc/salt.c: Add brackets and parenthesis.
	* libmisc/salt.c: Avoid assignments in comparisons.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/age.c: fork() and wait return a pid_t, not an int.
	* libmisc/age.c: Avoid implicit conversion of pointers to
	booleans.
	* libmisc/age.c: Avoid assignments in comparisons.
	* libmisc/age.c: Ignore the return value of printf(), puts(),
	fputs() and fflush().
	* libmisc/age.c: Add brackets and parenthesis.
	* libmisc/age.c: Cast the return value of time() to long and
	converted to a date.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/rlogin.c: The size argument of read() is a size_t.
	Propagate this time to the callers (the get_remote_string() and
	do_rlogin() functions).
	* libmisc/rlogin.c: Add brackets and parenthesis.
	* libmisc/rlogin.c: Avoid multi-statements lines.
	* libmisc/rlogin.c: Avoid assignments in comparisons.
	* libmisc/rlogin.c: Avoid implicit conversion of pointers to
	booleans.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/failure.c: Avoid assignments in comparisons.
	* libmisc/failure.c: read() returns a ssize_t.
	* libmisc/failure.c: Add brackets and parenthesis.